--- a/README.textile
+++ b/README.textile
@@ -43,11 +43,11 @@ h2. VimeoAdvanced
 
 VimeoAdvanced must be instantiated with an your application's api key and secret:
 
-bc. v = VimeoAdvanced.new("api_key", "secret")
+@v = VimeoAdvanced.new("api_key", "secret")@
 
 Then you can make calls on the instance:
 
-bc. v.videos_get_list(user_id, options)
+@bc. v.videos_get_list(user_id, options)@
 
 h2. Todo
 
