--- a/README.textile
+++ b/README.textile
@@ -4,6 +4,20 @@ This gem implements a full-featured ruby interface for the Vimeo API.
 
 Vimeo's API documentation is, in my opinion, pretty poor. I've done my best to implement all the functions that are described "here":http://vimeo.com/api-docs/advanced-api-docs.html. There are some extra functions described "here":http://vimeo.com/api/sandbox, but I can't be 100% sure what the correct parameters are for each method, so I'm going to omit them for the time being.
 
+h2. Install
+
+If you haven't already, add github's gem server to your sources:
+
+@gem sources -a http://gems.github.com@
+
+Then, it's as easy as:
+
+@sudo gem install matthooks-vimeo@
+
+Add the gem plugin to your Rails project by adding the following to your @environment.rb@ file:
+
+@config.gem "matthooks-vimeo", :sources => "http://gems.github.com/"@
+
 h2. Use
 
 Right now there are two models:
