--- a/README.textile
+++ b/README.textile
@@ -79,5 +79,6 @@ h2. Todo
 h2. Thanks to
 
 * "HTTParty":http://github.com/jnunemaker/httparty/tree/master: Easily one of the best tools I have used since I started using Ruby.
+* "Jeweler":http://github.com/technicalpickles/jeweler/tree/master: Great tool for creating gems for github.
 
 h3. Copyright (c) 2008 Matt Hooks. See LICENSE for details.
