--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,7 @@
+== 0.2.1, released 2009-01-06
+
+* Last version was missing files.
+
 == 0.2.0, released 2009-01-06
 
 * Major re-factor of each request method.
