--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,7 @@
+== 0.2.2
+
+* Removed CGI escapes. Vimeo should be handling them on their end.
+
 == 0.2.1, released 2009-01-06
 
 * Last version was missing files.
