--- a/README.rdoc
+++ b/README.rdoc
@@ -106,7 +106,7 @@ The classes in Vimeo::Advanced must be instantiated with an your application's a
 
 Then you can make method calls on the instance. For example:
 
-  vimeo_video.get_list("matthooks", :page => "2", :per_page => "50")
+  vimeo_video.get_all("matthooks", :page => "2", :per_page => "50")
   
 Some methods have optional variables. You should pass as a hash at the end of a call.
 
