--- a/README.rdoc
+++ b/README.rdoc
@@ -158,15 +158,15 @@ using the API.
 
   album = Vimeo::Advanced::Album.new("authorization_data")
   
-  album.add_video("album_id", "video_id")
-  album.create("title", "video_id", { :description => "description", "videos" => "123,124,125" })
-  album.delete("album_id")
+  album.add_video("auth_token", "album_id", "video_id")
+  album.create("auth_token", "title", "video_id", { :description => "description", "videos" => "123,124,125" })
+  album.delete("auth_token", "album_id")
   album.get_all("user_id", { :page => "1", :per_page => "25" })
-  album.get_videos("user_id", { :page => "1", :per_page => "25", :full_response => "0", :password => nil })
-  album.get_videos("album_id", "video_id")
-  album.set_description("album_id", "description")
-  album.get_password("album_id", "password")
-  album.get_title("album_id", "title")
+  album.get_videos("auth_token", "user_id", { :page => "1", :per_page => "25", :full_response => "0", :password => nil })
+  album.get_videos("auth_token", "album_id", "video_id")
+  album.set_description("auth_token", "album_id", "description")
+  album.get_password("auth_token", "album_id", "password")
+  album.get_title("auth_token", "album_id", "title")
   
 === Vimeo::Advanced::Base
 
@@ -178,15 +178,15 @@ using the API.
 
   channel = Vimeo::Advanced::Channel.new("authorization_data")
   
-  channel.add_video("channel_id", "video_id")
+  channel.add_video("auth_token", "channel_id", "video_id")
   channel.get_all({ :page => "1", :per_page => "25", :sort => "newest"})
   channel.get_info(channel_id, { :page => "1", :per_page => "25" })
   channel.get_moderators(channel_id, { :page => "1", :per_page => "25" })
   channel.get_subscribers(channel_id, { :page => "1", :per_page => "25" })
   channel.get_videos(channel_id, { :page => "1", :per_page => "25", :full_response => "0" })
-  channel.remove_video("channel_id", "video_id")
-  channel.subscribe("channel_id")
-  channel.unsubscribe("channel_id")
+  channel.remove_video("auth_token", "channel_id", "video_id")
+  channel.subscribe("auth_token", "channel_id")
+  channel.unsubscribe("auth_token", "channel_id")
 
 === Vimeo::Advanced::Contact
 
@@ -201,7 +201,7 @@ using the API.
 
   group = Vimeo::Advanced::Group.new("authorization_data")
 
-  group.add_video("group_id", "video_id")
+  group.add_video("auth_token", "group_id", "video_id")
   group.get_all({ :page => "1", :per_page => "25", :sort => "newest" })
   group.get_files("group_id", { :page => "1", :per_page => "25" })
   group.get_info("group_id", { :page => "1", :per_page => "25" })
@@ -209,8 +209,8 @@ using the API.
   group.get_moderators("group_id", { :page => "1", :per_page => "25" })
   group.get_video_comments("group_id", "video_id", { :page => "1", :per_page => "25" })
   group.get_videos("group_id", { :page => "1", :per_page => "25", :full_response => "0", :sort => "newest" })
-  group.join("group_id")
-  group.leave("group_id")
+  group.join("auth_token", "group_id")
+  group.leave("auth_token", "group_id")
 
 === Vimeo::Advanced::GroupEvents
 
@@ -231,14 +231,14 @@ using the API.
 
   person = Vimeo::Advanced::Person.new("authorization_data")
 
-  person.add_contact("user_id")
-  person.add_subscription("user_id", "types") # Types is a comma-delimited string. Valid: "likes", "appears", "uploads"
+  person.add_contact("auth_token", "user_id")
+  person.add_subscription("auth_token", "user_id", "types") # Types is a comma-delimited string. Valid: "likes", "appears", "uploads"
   person.find_by_email("user_id")
-  person.get_hd_embeds
+  person.get_hd_embeds("auth_token")
   person.get_info("user_id")
   person.get_portrait_urls("user_id")
-  person.remove_contact("user_id")
-  person.remove_subscription("user_id", "types") # Types is a comma-delimited string. Valid: "likes", "appears", "uploads"
+  person.remove_contact("auth_token", "user_id")
+  person.remove_subscription("auth_token", "user_id", "types") # Types is a comma-delimited string. Valid: "likes", "appears", "uploads"
 
 === Vimeo::Advanced::Test
 
@@ -252,21 +252,21 @@ using the API.
 
   upload = Vimeo::Advanced::Upload.new("authorization_data")
   
-  upload.confirm("ticket_id", "json_manifest")
-  upload.get_quota
-  upload.get_ticket
-  upload.upload("path_to_file", "ticket_id", "end_point")
-  upload.verify_manifest("ticket_id", "json_manifest")
+  upload.confirm("auth_token", "ticket_id", "json_manifest")
+  upload.get_quota("auth_token")
+  upload.get_ticket("auth_token")
+  upload.upload("auth_token", "path_to_file", "ticket_id", "end_point")
+  upload.verify_manifest("auth_token", "ticket_id", "json_manifest")
 
 === Vimeo::Advanced::Video
 
   video = Vimeo::Advanced::Video.new("authorization_data")
 
-  video.add_cast("video_id", "user_id", { :role => nil })
-  video.add_photos("video_id", "photo_urls")
-  video.add_tags("video_id", "tags")
-  video.clear_tags("video_id")
-  video.delete("video_id")
+  video.add_cast("auth_token", "video_id", "user_id", { :role => nil })
+  video.add_photos("auth_token", "video_id", "photo_urls")
+  video.add_tags("auth_token", "video_id", "tags")
+  video.clear_tags("auth_token", "video_id")
+  video.delete("auth_token", "video_id")
   video.get_all("user_id", { :page => "1", :per_page => "25", :full_response => "0", :sort => "newest" })
   video.get_appears_in("user_id", { :page => "1", :per_page => "25", :full_response => "0", :sort => "newest" })
   video.get_by_tag("tag", { :page => "1", :per_page => "25", :full_response => "0", :sort => "newest" })
@@ -278,26 +278,26 @@ using the API.
   video.get_subscriptions("user_id", { :page => "1", :per_page => "25", :full_response => "0", :sort => "newest" })
   video.get_thumbnail_urls("video_id")
   video.get_uploaded("user_id", { :page => "1", :per_page => "25", :full_response => "0", :sort => "newest" })
-  video.remove_cast("video_id", "user_id")
-  video.remove_tag("video_id", "tag_id")
+  video.remove_cast("auth_token", "video_id", "user_id")
+  video.remove_tag("auth_token", "video_id", "tag_id")
   video.search("query", { :page => "1", :per_page => "25", :full_response => "0", :sort => "newest", :user_id => nil })
-  video.set_description("video_id", "description")
-  video.set_like("video_id", "like")
-  video.set_privacy("video_id", "privacy", { :users => nil, :password => nil })
-  video.set_title("video_id", "title")
+  video.set_description("auth_token", "video_id", "description")
+  video.set_like("auth_token", "video_id", "like")
+  video.set_privacy("auth_token", "video_id", "privacy", { :users => nil, :password => nil })
+  video.set_title("auth_token", "video_id", "title")
 
   # comments
-  video.add_comment("video_id", "comment_text", { :reply_to_comment_id => nil })
-  video.delete_comment("video_id", "comment_id")
-  video.edit_comment("video_id", "comment_id", "comment_text")
+  video.add_comment("auth_token", "video_id", "comment_text", { :reply_to_comment_id => nil })
+  video.delete_comment("auth_token", "video_id", "comment_id")
+  video.edit_comment("auth_token", "video_id", "comment_id", "comment_text")
   video.get_comments_list("video_id", { :page => "1", :per_page => "25" })
                   
 === Vimeo::Advanced::VideoEmbed
 
   video_embed = Vimeo::Advanced::VideoEmbed.new("authorization_data")
 
-  video_embed.get_presets({ :page => "1", :per_page => "25" })
-  video_embed.set_preset("video_id", "preset_id")
+  video_embed.get_presets("auth_token", { :page => "1", :per_page => "25" })
+  video_embed.set_preset("auth_token", "video_id", "preset_id")
 
 == Uploads
 
